[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fase3.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Fundo.svg" type="Texture" id=2]
[ext_resource path="res://Fontes/roboto/Roboto-LightItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/Tabela.svg" type="Texture" id=4]
[ext_resource path="res://Imagens/Simbolo2.svg" type="Texture" id=5]
[ext_resource path="res://Fontes/roboto/Roboto-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]

size = 26
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=6]

default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]

size = 27
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Theme" id=8]

default_font = SubResource( 7 )

[node name="Fase2" type="Node2D"]

script = ExtResource( 1 )

[node name="Fundo" type="Sprite" parent="." index="0"]

position = Vector2( 541.484, 284.666 )
scale = Vector2( 1.45192, 0.586813 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="." index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -121.0
margin_top = 2.0
margin_right = 1108.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "De acordo com a tabela abaixo, escolha a alternativa correta da relação entre 
o solvente e a água."
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label2" type="Label" parent="." index="2"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 153.0
margin_right = 971.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Diclorometano com água formará uma mistura heterogênea, com duas fases, sendo a 
fase de cima o diclorometano."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label19" type="Label" parent="." index="3"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 107.0
margin_right = 971.0
margin_bottom = 143.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Etanol e água formam uma mistura com duas fases."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label21" type="Label" parent="." index="4"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 261.0
margin_right = 659.0
margin_bottom = 297.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "O isopropanol e a água formará uma mistura homogênea."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Label20" type="Label" parent="." index="5"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 227.0
margin_right = 971.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 2 )
text = "Benzeno e água formam uma mistura homogênea."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="Tabela" type="Sprite" parent="." index="6"]

position = Vector2( 270.045, 430.12 )
scale = Vector2( 0.918208, 0.471576 )
texture = ExtResource( 4 )

[node name="Label3" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 73.0
margin_top = 326.0
margin_right = 143.0
margin_bottom = 356.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Solvente"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label4" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 78.0
margin_top = 386.0
margin_right = 148.0
margin_bottom = 416.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Etanol"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label10" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 274.0
margin_top = 384.0
margin_right = 344.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Miscível"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label14" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 426.0
margin_top = 326.0
margin_right = 589.0
margin_bottom = 356.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Densidade (g/mL -¹)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label15" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 473.0
margin_top = 381.0
margin_right = 532.0
margin_bottom = 411.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "0,789"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label16" type="Label" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 442.0
margin_right = 520.0
margin_bottom = 472.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "1,325"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label17" type="Label" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 471.0
margin_top = 498.0
margin_right = 521.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "0,879"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label18" type="Label" parent="." index="14"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 470.0
margin_top = 547.0
margin_right = 522.0
margin_bottom = 577.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "0,795"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label11" type="Label" parent="." index="15"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 274.0
margin_top = 549.0
margin_right = 344.0
margin_bottom = 579.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Miscível"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label12" type="Label" parent="." index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 272.0
margin_top = 440.0
margin_right = 345.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Imiscível"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label13" type="Label" parent="." index="17"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 495.0
margin_right = 344.0
margin_bottom = 525.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Imiscível"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label9" type="Label" parent="." index="18"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 377.0
margin_top = 335.0
margin_right = 385.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "²"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label5" type="Label" parent="." index="19"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 53.0
margin_top = 439.0
margin_right = 172.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Diclorometano"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label6" type="Label" parent="." index="20"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.0
margin_top = 499.0
margin_right = 187.0
margin_bottom = 529.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Benzeno"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label7" type="Label" parent="." index="21"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_top = 546.0
margin_right = 177.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Isopropanol"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Label8" type="Label" parent="." index="22"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 232.0
margin_top = 327.0
margin_right = 402.0
margin_bottom = 357.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 4 )
text = "Solubilidade em H O"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme" ]

[node name="Simbolo" type="Sprite" parent="." index="23"]

editor/display_folded = true
position = Vector2( 998.653, 74.3584 )
scale = Vector2( 0.294519, 0.399629 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Simbolo" index="0"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -113.0
margin_right = -2.0
margin_bottom = -70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = SubResource( 6 )
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "Visibility" ]

[node name="CheckBox" type="CheckBox" parent="." index="24"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 114.0
margin_right = 27.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="CheckBox2" type="CheckBox" parent="." index="25"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 161.0
margin_right = 28.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="CheckBox3" type="CheckBox" parent="." index="26"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 234.0
margin_right = 28.0
margin_bottom = 258.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="CheckBox4" type="CheckBox" parent="." index="27"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 268.0
margin_right = 28.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0

[node name="Button" type="Button" parent="." index="28"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 766.0
margin_top = 367.0
margin_right = 909.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Ok"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[node name="Button2" type="Button" parent="." index="29"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 896.0
margin_top = 556.0
margin_right = 1025.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 8 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Continuar"
flat = false
align = 1
_sections_unfolded = [ "Theme" ]

[connection signal="button_down" from="CheckBox" to="." method="_on_CheckBox_button_down"]

[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]

[connection signal="button_down" from="CheckBox2" to="." method="_on_CheckBox2_button_down"]

[connection signal="pressed" from="CheckBox2" to="." method="_on_CheckBox2_pressed"]

[connection signal="button_down" from="CheckBox3" to="." method="_on_CheckBox3_button_down"]

[connection signal="pressed" from="CheckBox3" to="." method="_on_CheckBox3_pressed"]

[connection signal="button_down" from="CheckBox4" to="." method="_on_CheckBox4_button_down"]

[connection signal="pressed" from="CheckBox4" to="." method="_on_CheckBox4_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]


